<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="475dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bReset"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:onClick="reseteaContador"
            android:text="@string/bReset"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/n_reset"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:hint="0"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/negativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="checkbox"
            android:text="@string/n_negativos" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="275dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bResta"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:onClick="restaContador"
            android:text="@string/bResta"
            android:textSize="36sp" />
        <Space
            android:layout_width="40dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/bSuma"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:onClick="incrementaContador"
            android:text="@string/bSuma"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tContador"
            android:layout_width="185dp"
            android:layout_height="70dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="80dp"
            android:text="@string/tContador"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tCuenta"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:textAlignment="center"
            android:textSize="40sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>